fix: z-index for notifications boxes

--- a/src/static/styles/ui.scss
+++ b/src/static/styles/ui.scss
@@ -315,4 +315,6 @@
 
     max-height: 70vh;
     overflow: auto;
+
+    z-index: 9999;
 }
